--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ install:
 
 script:
   - wget https://raw.githubusercontent.com/richelbilderbeek/travis_pandoc_tex_to_epub/master/example.tex
+  - cat example.tex
   - python tex2ebook.py example.tex
   - epubcheck example.epub
